--- a/home/.config/bat/config
+++ b/home/.config/bat/config
@@ -1,5 +1,6 @@
 # Set the theme to "TwoDark"
 --theme="Gruvbox"
+# --theme="OneHalfDark"
 
 # Show line numbers, Git modifications and file header (but no grid)
 --style="numbers,changes,header"
