--- a/home/.config/bat/config
+++ b/home/.config/bat/config
@@ -1,5 +1,5 @@
 # Set the theme to "TwoDark"
---theme="Gruvbox"
+--theme="gruvbox"
 # --theme="OneHalfDark"
 
 # Show line numbers, Git modifications and file header (but no grid)
