--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size        14
+font_size        15
 disable_ligatures always
 # adjust_line_height 80%
 adjust_column_width 0
@@ -14,7 +14,7 @@ url_color #26BBD9
 sync_to_monitor yes
 dynamic_background_opacity no
 editor nvim
-scrollback_lines 10000
+scrollback_lines 100000
 allow_remote_control yes
 tab_bar_edge top
 tab_bar_style separator
@@ -84,16 +84,22 @@ map f5 kitten hints --type word --program @
 map shift+f5 kitten hints --type line --program @
 map ctrl+shift+w close_window
 
-
 enabled_layouts tall, fat, stack
+
 map shift+left neighboring_window left
 map shift+right neighboring_window right
 map shift+up neighboring_window up
 map shift+down neighboring_window down
-map shift+ctrl+left resize_window narrower
-map shift+ctrl+right resize_window wider
-map shift+ctrl+up resize_window taller
-map shift+ctrl+down resize_window shorter
+
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+
+map shift+ctrl+left resize_window narrower 10
+map shift+ctrl+right resize_window wider 10
+map shift+ctrl+up resize_window taller 10
+map shift+ctrl+down resize_window shorter 10
 inactive_text_alpha 0.8
 bell_border_color #ff5a00
 inactive_border_color #cccccc
@@ -102,3 +108,7 @@ map ctrl+alt+t goto_layout tall
 map ctrl+alt+s goto_layout stack
 
 hide_window_decorations yes
+
+# dynamic_background_opacity yes
+# map ctrl+shift+y set_background_opacity +0.1
+# map ctrl+shift+t set_background_opacity -0.1
