cleanup vim config

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -12,6 +12,33 @@
   "explorer.previewAction.onHover": false,
   "explorer.file.autoReveal": true,
   "git.enableGutters": true,
+  // "diagnostic.errorSign": "✖",
+  // "diagnostic.warningSign": "",
+  // "diagnostic.infoSign": "",
+  // "git.changedSign.text": "⬤",
+  // "git.changeRemovedSign.text": "⬤",
+  // "git.removedSign.text": "⬤",
+  // "git.conflictedDecorator": "⬤",
+  // "git.addedSign.text": "⬤",
+  // "explorer.git.icon.status.mixed": "*",
+  // "explorer.git.icon.status.added": "✚",
+  // "explorer.git.icon.status.deleted": "D",
+  // "explorer.git.icon.status.copied": "C",
+  // "explorer.git.icon.status.unmerged": "U",
+  // "explorer.git.icon.status.renamed": "R",
+  // "explorer.git.icon.status.ignored": "!",
+  // "explorer.git.icon.status.modified": "M",
+  // "explorer.git.icon.status.untracked": "?",
+  // "explorer.git.icon.status.unmodified": " ",
+  // "explorer.git.icon.rootStatus.ahead": "⇡",
+  // "explorer.git.icon.rootStatus.added": "✚",
+  // "explorer.git.icon.rootStatus.behind": "⇣",
+  // "explorer.git.icon.rootStatus.stashed": "$",
+  // "explorer.git.icon.rootStatus.renamed": "→",
+  // "explorer.git.icon.rootStatus.deleted": "✗",
+  // "explorer.git.icon.rootStatus.modified": "~",
+  // "explorer.git.icon.rootStatus.untracked": "?",
+  // "explorer.git.icon.rootStatus.conflicted": "=",
   "python.jediEnabled": false,
   "explorer.file.showHiddenFiles": false,
   "explorer.sources": [
@@ -75,11 +102,19 @@
     "default": true,
     "line_length": false
   },
-  "suggest.snippetIndicator": "~"
+  "suggest.snippetIndicator": "~",
   // "tabnine.priority": 4,
   // "suggest.languageSourcePriority": 1,
   // "coc.source.buffer.priority": 1,
   // "coc.source.file.priority": 2,
   // "coc.source.around.priority": 3,
   // "snippets.priority": 5
+    "pairs.enableCharacters": [
+    "(",
+    "[",
+    "{",
+    "'",
+    "\"",
+    "`"
+  ]
 }
