--- a/home/.skhdrc
+++ b/home/.skhdrc
@@ -1,5 +1,5 @@
 # open terminal
-cmd - return : /Applications/Kitty.app/Contents/MacOS/kitty --listen-on unix:/tmp/mykitty --single-instance -d ~
+shift + cmd - return : /Applications/Kitty.app/Contents/MacOS/kitty --listen-on unix:/tmp/mykitty --single-instance -d ~
 
 # focus window
 alt - left : yabai -m window --focus west
