commented out signs for errors in lsp and git status

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -12,10 +12,22 @@
   "explorer.previewAction.onHover": false,
   "explorer.file.autoReveal": true,
   "git.enableGutters": true,
+  "diagnostic.errorSign": ">>",
+  "diagnostic.warningSign": "--",
+  "diagnostic.infoSign": "·",
   // "diagnostic.errorSign": "✖",
   // "diagnostic.warningSign": "",
   // "diagnostic.infoSign": "",
-  // "git.changedSign.text": "⬤",
+  // "git.changedSign.text": "•",
+  // "Modified"  : "⋆",
+  // "Staged"    : "•",
+  // "Untracked" : "∘",
+  // "Renamed"   : "®",
+  // "Dirty"     : "⁖",
+  // "Clean"     : "✔︎",
+  // "Unmerged"  : "≄",
+  // "Deleted"   : "♻",
+  // "Unknown"   : "✗"
   // "git.changeRemovedSign.text": "⬤",
   // "git.removedSign.text": "⬤",
   // "git.conflictedDecorator": "⬤",
