Cleaner vim config

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -15,42 +15,20 @@
   "diagnostic.errorSign": ">>",
   "diagnostic.warningSign": "--",
   "diagnostic.infoSign": "·",
-  // "diagnostic.errorSign": "✖",
-  // "diagnostic.warningSign": "",
-  // "diagnostic.infoSign": "",
-  // "git.changedSign.text": "•",
-  // "Modified"  : "⋆",
-  // "Staged"    : "•",
-  // "Untracked" : "∘",
-  // "Renamed"   : "®",
-  // "Dirty"     : "⁖",
-  // "Clean"     : "✔︎",
-  // "Unmerged"  : "≄",
-  // "Deleted"   : "♻",
-  // "Unknown"   : "✗"
-  // "git.changeRemovedSign.text": "⬤",
-  // "git.removedSign.text": "⬤",
-  // "git.conflictedDecorator": "⬤",
-  // "git.addedSign.text": "⬤",
-  // "explorer.git.icon.status.mixed": "*",
-  // "explorer.git.icon.status.added": "✚",
-  // "explorer.git.icon.status.deleted": "D",
-  // "explorer.git.icon.status.copied": "C",
-  // "explorer.git.icon.status.unmerged": "U",
-  // "explorer.git.icon.status.renamed": "R",
-  // "explorer.git.icon.status.ignored": "!",
-  // "explorer.git.icon.status.modified": "M",
-  // "explorer.git.icon.status.untracked": "?",
-  // "explorer.git.icon.status.unmodified": " ",
-  // "explorer.git.icon.rootStatus.ahead": "⇡",
-  // "explorer.git.icon.rootStatus.added": "✚",
-  // "explorer.git.icon.rootStatus.behind": "⇣",
-  // "explorer.git.icon.rootStatus.stashed": "$",
-  // "explorer.git.icon.rootStatus.renamed": "→",
-  // "explorer.git.icon.rootStatus.deleted": "✗",
-  // "explorer.git.icon.rootStatus.modified": "~",
-  // "explorer.git.icon.rootStatus.untracked": "?",
-  // "explorer.git.icon.rootStatus.conflicted": "=",
+  // "explorer.icon.expanded": "",
+  // "explorer.icon.collapsed": "",
+  // "explorer.icon.customIcons": {
+  //   "icons": {
+  //     "folderClosed": {
+  //       "code": "",
+  //       "color": "#00afaf"
+  //     },
+  //     "folderOpened": {
+  //       "code": "",
+  //       "color": "#00afaf"
+  //     }
+  //   }
+  // },
   "python.jediEnabled": false,
   "explorer.file.showHiddenFiles": false,
   "explorer.sources": [
@@ -121,18 +99,47 @@
     "line_length": false
   },
   "suggest.snippetIndicator": "~",
+  "pairs.enableCharacters": ["(", "[", "{", "'", "\"", "`"]
   // "tabnine.priority": 4,
   // "suggest.languageSourcePriority": 1,
   // "coc.source.buffer.priority": 1,
   // "coc.source.file.priority": 2,
   // "coc.source.around.priority": 3,
   // "snippets.priority": 5
-    "pairs.enableCharacters": [
-    "(",
-    "[",
-    "{",
-    "'",
-    "\"",
-    "`"
-  ]
+  // "diagnostic.errorSign": "✖",
+  // "diagnostic.warningSign": "",
+  // "diagnostic.infoSign": "",
+  // "git.changedSign.text": "•",
+  // "Modified"  : "⋆",
+  // "Staged"    : "•",
+  // "Untracked" : "∘",
+  // "Renamed"   : "®",
+  // "Dirty"     : "⁖",
+  // "Clean"     : "✔︎",
+  // "Unmerged"  : "≄",
+  // "Deleted"   : "♻",
+  // "Unknown"   : "✗"
+  // "git.changeRemovedSign.text": "⬤",
+  // "git.removedSign.text": "⬤",
+  // "git.conflictedDecorator": "⬤",
+  // "git.addedSign.text": "⬤",
+  // "explorer.git.icon.status.mixed": "*",
+  // "explorer.git.icon.status.added": "✚",
+  // "explorer.git.icon.status.deleted": "D",
+  // "explorer.git.icon.status.copied": "C",
+  // "explorer.git.icon.status.unmerged": "U",
+  // "explorer.git.icon.status.renamed": "R",
+  // "explorer.git.icon.status.ignored": "!",
+  // "explorer.git.icon.status.modified": "M",
+  // "explorer.git.icon.status.untracked": "?",
+  // "explorer.git.icon.status.unmodified": " ",
+  // "explorer.git.icon.rootStatus.ahead": "⇡",
+  // "explorer.git.icon.rootStatus.added": "✚",
+  // "explorer.git.icon.rootStatus.behind": "⇣",
+  // "explorer.git.icon.rootStatus.stashed": "$",
+  // "explorer.git.icon.rootStatus.renamed": "→",
+  // "explorer.git.icon.rootStatus.deleted": "✗",
+  // "explorer.git.icon.rootStatus.modified": "~",
+  // "explorer.git.icon.rootStatus.untracked": "?",
+  // "explorer.git.icon.rootStatus.conflicted": "=",
 }
