--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -1,11 +1,14 @@
 # font_family      Hack Nerd Font
 font_family      JetBrainsMono Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-font_size        15
+# font_family      TerminessTTF Nerd Font Mono
+# font_family      Input Mono Narrow
+# bold_font        Input Mono Narrow Medium
+# italic_font      Input Mono Narrow Italic
+# bold_italic_font Input Mono Narrow Medium Italic
+# font_family      Hasklug Nerd Font
+font_size        14
 disable_ligatures always
-# adjust_line_height 90%
+# adjust_line_height 81%
 adjust_column_width 0
 window_padding_width 0
 # window_margin_width 2
@@ -25,7 +28,7 @@ active_tab_font_style   bold-italic
 inactive_tab_foreground #a89984
 inactive_tab_background #1d2021
 inactive_tab_font_style italic
-scrollback_pager /usr/local/bin/nvim -u NONE -c "set nonumber nolist showtabline=0 foldcolumn=0 clipboard=unnamedplus laststatus=0" -c "autocmd TermOpen * normal G" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
+scrollback_pager /usr/local/bin/nvim -u NONE -c "set nolist showtabline=0 foldcolumn=0 clipboard=unnamedplus laststatus=0" -c "autocmd TermOpen * normal G" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
 #: Color scheme {{{
 
@@ -62,27 +65,27 @@ color15 #ebdbb2
 
 #: }}}
 
+map shift+enter new_window_with_cwd
 # map ctrl+shift+y set_background_opacity +0.1
 # map ctrl+shift+t set_background_opacity -0.1
-map ctrl+shift+equal change_font_size all +1.0
-map ctrl+shift+minus change_font_size all -1.0
-map ctrl+shift+up scroll_line_up
-map ctrl+shift+k scroll_line_up
-map ctrl+shift+down scroll_line_down
-map ctrl+shift+j scroll_line_down
-map ctrl+shift+page_up scroll_page_up
-map ctrl+shift+page_down scroll_page_down
-map ctrl+shift+home scroll_home
-map ctrl+shift+end scroll_end
-map ctrl+shift+h show_scrollback
-map ctrl+shift+enter new_os_window_with_cwd
-map shift+enter new_window_with_cwd
-map f2 kitten grab1.py
-map f4 kitten hints --program ~/.config/kitty/chrome.sh
-map shift+f4 kitten hints --type word --program ~/.config/kitty/chrome.sh
-map f5 kitten hints --type word --program @
-map shift+f5 kitten hints --type line --program @
-map ctrl+shift+w close_window
+# map ctrl+shift+equal change_font_size all +1.0
+# map ctrl+shift+minus change_font_size all -1.0
+# map ctrl+shift+up scroll_line_up
+# map ctrl+shift+k scroll_line_up
+# map ctrl+shift+down scroll_line_down
+# map ctrl+shift+j scroll_line_down
+# map ctrl+shift+page_up scroll_page_up
+# map ctrl+shift+page_down scroll_page_down
+# map ctrl+shift+home scroll_home
+# map ctrl+shift+end scroll_end
+# map ctrl+shift+h show_scrollback
+# map ctrl+shift+enter new_os_window_with_cwd
+# map f2 kitten grab1.py
+# map f4 kitten hints --program ~/.config/kitty/chrome.sh
+# map shift+f4 kitten hints --type word --program ~/.config/kitty/chrome.sh
+# map f5 kitten hints --type word --program @
+# map shift+f5 kitten hints --type line --program @
+# map ctrl+shift+w close_window
 
 enabled_layouts tall, fat, stack
 
