--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -1,5 +1,9 @@
+font_family      Cascadia Mono
+bold_font        Cascadia Mono Bold
+italic_font      Cascadia Mono Italic Italic
+bold_italic_font Cascadia Mono Italic Bold Italic
 # font_family      Hack Nerd Font
-font_family      JetBrainsMono Nerd Font
+# font_family      JetBrainsMono Nerd Font
 # font_family      TerminessTTF Nerd Font Mono
 # font_family      Input Mono Narrow
 # bold_font        Input Mono Narrow Medium
@@ -115,3 +119,6 @@ hide_window_decorations yes
 # dynamic_background_opacity yes
 # map ctrl+shift+y set_background_opacity +0.1
 # map ctrl+shift+t set_background_opacity -0.1
+
+# nonicons
+# symbol_map U+f101-U+f208 nonicons
